--- a/modularscale.css
+++ b/modularscale.css
@@ -6,58 +6,67 @@
   --ms-ratio-md: 1.17;
   --ms-ratio-lg: 1.2;
   --ms-base: 1rem;
+  --ms-base-sm: var(--ms-base);
+  --ms-base-md: var(--ms-base);
+  --ms-base-lg: var(--ms-base);
 
   --font-size--1: {
-    font-size: calc(var(--ms-base) / var(--ms-ratio-sm));
-    @media (--ms-viewport-md) { font-size: calc(var(--ms-base) / var(--ms-ratio-md)); }
-    @media (--ms-viewport-lg) { font-size: calc(var(--ms-base) / var(--ms-ratio-lg)); }
+    font-size: calc(var(--ms-base-sm) / var(--ms-ratio-sm));
+    @media (--ms-viewport-md) { font-size: calc(var(--ms-base-md) / var(--ms-ratio-md)); }
+    @media (--ms-viewport-lg) { font-size: calc(var(--ms-base-lg) / var(--ms-ratio-lg)); }
+  }
+
+  --font-size-0: {
+    font-size: var(--ms-base-sm);
+    @media (--ms-viewport-md) { font-size: var(--ms-base-md); }
+    @media (--ms-viewport-lg) { font-size: var(--ms-base-lg); }
   }
 
   --font-size-1: {
-    font-size: calc(var(--ms-base) * var(--ms-ratio-sm));
-    @media (--ms-viewport-md) { font-size: calc(var(--ms-base) * var(--ms-ratio-md)); }
-    @media (--ms-viewport-lg) { font-size: calc(var(--ms-base) * var(--ms-ratio-lg)); }
+    font-size: calc(var(--ms-base-sm) * var(--ms-ratio-sm));
+    @media (--ms-viewport-md) { font-size: calc(var(--ms-base-md) * var(--ms-ratio-md)); }
+    @media (--ms-viewport-lg) { font-size: calc(var(--ms-base-lg) * var(--ms-ratio-lg)); }
   }
 
   --font-size-2: {
-    font-size: calc(var(--ms-base) * var(--ms-ratio-sm) * var(--ms-ratio-sm));
-    @media (--ms-viewport-md) { font-size: calc(var(--ms-base) * var(--ms-ratio-md) * var(--ms-ratio-md)); }
-    @media (--ms-viewport-lg) { font-size: calc(var(--ms-base) * var(--ms-ratio-lg) * var(--ms-ratio-lg)); }
+    font-size: calc(var(--ms-base-sm) * var(--ms-ratio-sm) * var(--ms-ratio-sm));
+    @media (--ms-viewport-md) { font-size: calc(var(--ms-base-md) * var(--ms-ratio-md) * var(--ms-ratio-md)); }
+    @media (--ms-viewport-lg) { font-size: calc(var(--ms-base-lg) * var(--ms-ratio-lg) * var(--ms-ratio-lg)); }
   }
 
   --font-size-3: {
-    font-size: calc(var(--ms-base) * var(--ms-ratio-sm) * var(--ms-ratio-sm) * var(--ms-ratio-sm));
-    @media (--ms-viewport-md) { font-size: calc(var(--ms-base) * var(--ms-ratio-md) * var(--ms-ratio-md) * var(--ms-ratio-md)); }
-    @media (--ms-viewport-lg) { font-size: calc(var(--ms-base) * var(--ms-ratio-lg) * var(--ms-ratio-lg) * var(--ms-ratio-lg)); }
+    font-size: calc(var(--ms-base-sm) * var(--ms-ratio-sm) * var(--ms-ratio-sm) * var(--ms-ratio-sm));
+    @media (--ms-viewport-md) { font-size: calc(var(--ms-base-md) * var(--ms-ratio-md) * var(--ms-ratio-md) * var(--ms-ratio-md)); }
+    @media (--ms-viewport-lg) { font-size: calc(var(--ms-base-lg) * var(--ms-ratio-lg) * var(--ms-ratio-lg) * var(--ms-ratio-lg)); }
   }
 
   --font-size-4: {
-    font-size: calc(var(--ms-base) * var(--ms-ratio-sm) * var(--ms-ratio-sm) * var(--ms-ratio-sm) * var(--ms-ratio-sm));
-    @media (--ms-viewport-md) { font-size: calc(var(--ms-base) * var(--ms-ratio-md) * var(--ms-ratio-md) * var(--ms-ratio-md) * var(--ms-ratio-md)); }
-    @media (--ms-viewport-lg) { font-size: calc(var(--ms-base) * var(--ms-ratio-lg) * var(--ms-ratio-lg) * var(--ms-ratio-lg) * var(--ms-ratio-lg)); }
+    font-size: calc(var(--ms-base-sm) * var(--ms-ratio-sm) * var(--ms-ratio-sm) * var(--ms-ratio-sm) * var(--ms-ratio-sm));
+    @media (--ms-viewport-md) { font-size: calc(var(--ms-base-md) * var(--ms-ratio-md) * var(--ms-ratio-md) * var(--ms-ratio-md) * var(--ms-ratio-md)); }
+    @media (--ms-viewport-lg) { font-size: calc(var(--ms-base-lg) * var(--ms-ratio-lg) * var(--ms-ratio-lg) * var(--ms-ratio-lg) * var(--ms-ratio-lg)); }
   }
 
   --font-size-5: {
-    font-size: calc(var(--ms-base) * var(--ms-ratio-sm) * var(--ms-ratio-sm) * var(--ms-ratio-sm) * var(--ms-ratio-sm) * var(--ms-ratio-sm));
-    @media (--ms-viewport-md) { font-size: calc(var(--ms-base) * var(--ms-ratio-md) * var(--ms-ratio-md) * var(--ms-ratio-md) * var(--ms-ratio-md) * var(--ms-ratio-md)); }
-    @media (--ms-viewport-lg) { font-size: calc(var(--ms-base) * var(--ms-ratio-lg) * var(--ms-ratio-lg) * var(--ms-ratio-lg) * var(--ms-ratio-lg) * var(--ms-ratio-lg)); }
+    font-size: calc(var(--ms-base-sm) * var(--ms-ratio-sm) * var(--ms-ratio-sm) * var(--ms-ratio-sm) * var(--ms-ratio-sm) * var(--ms-ratio-sm));
+    @media (--ms-viewport-md) { font-size: calc(var(--ms-base-md) * var(--ms-ratio-md) * var(--ms-ratio-md) * var(--ms-ratio-md) * var(--ms-ratio-md) * var(--ms-ratio-md)); }
+    @media (--ms-viewport-lg) { font-size: calc(var(--ms-base-lg) * var(--ms-ratio-lg) * var(--ms-ratio-lg) * var(--ms-ratio-lg) * var(--ms-ratio-lg) * var(--ms-ratio-lg)); }
   }
 
   --font-size-6: {
-    font-size: calc(var(--ms-base) * var(--ms-ratio-sm) * var(--ms-ratio-sm) * var(--ms-ratio-sm) * var(--ms-ratio-sm) * var(--ms-ratio-sm) * var(--ms-ratio-sm));
-    @media (--ms-viewport-md) { font-size: calc(var(--ms-base) * var(--ms-ratio-md) * var(--ms-ratio-md) * var(--ms-ratio-md) * var(--ms-ratio-md) * var(--ms-ratio-md) * var(--ms-ratio-md)); }
-    @media (--ms-viewport-lg) { font-size: calc(var(--ms-base) * var(--ms-ratio-lg) * var(--ms-ratio-lg) * var(--ms-ratio-lg) * var(--ms-ratio-lg) * var(--ms-ratio-lg) * var(--ms-ratio-lg)); }
+    font-size: calc(var(--ms-base-sm) * var(--ms-ratio-sm) * var(--ms-ratio-sm) * var(--ms-ratio-sm) * var(--ms-ratio-sm) * var(--ms-ratio-sm) * var(--ms-ratio-sm));
+    @media (--ms-viewport-md) { font-size: calc(var(--ms-base-md) * var(--ms-ratio-md) * var(--ms-ratio-md) * var(--ms-ratio-md) * var(--ms-ratio-md) * var(--ms-ratio-md) * var(--ms-ratio-md)); }
+    @media (--ms-viewport-lg) { font-size: calc(var(--ms-base-lg) * var(--ms-ratio-lg) * var(--ms-ratio-lg) * var(--ms-ratio-lg) * var(--ms-ratio-lg) * var(--ms-ratio-lg) * var(--ms-ratio-lg)); }
   }
 
   --font-size-7: {
-    font-size: calc(var(--ms-base) * var(--ms-ratio-sm) * var(--ms-ratio-sm) * var(--ms-ratio-sm) * var(--ms-ratio-sm) * var(--ms-ratio-sm) * var(--ms-ratio-sm) * var(--ms-ratio-sm));
-    @media (--ms-viewport-md) { font-size: calc(var(--ms-base) * var(--ms-ratio-md) * var(--ms-ratio-md) * var(--ms-ratio-md) * var(--ms-ratio-md) * var(--ms-ratio-md) * var(--ms-ratio-md) * var(--ms-ratio-md)); }
-    @media (--ms-viewport-lg) { font-size: calc(var(--ms-base) * var(--ms-ratio-lg) * var(--ms-ratio-lg) * var(--ms-ratio-lg) * var(--ms-ratio-lg) * var(--ms-ratio-lg) * var(--ms-ratio-lg) * var(--ms-ratio-lg)); }
+    font-size: calc(var(--ms-base-sm) * var(--ms-ratio-sm) * var(--ms-ratio-sm) * var(--ms-ratio-sm) * var(--ms-ratio-sm) * var(--ms-ratio-sm) * var(--ms-ratio-sm) * var(--ms-ratio-sm));
+    @media (--ms-viewport-md) { font-size: calc(var(--ms-base-md) * var(--ms-ratio-md) * var(--ms-ratio-md) * var(--ms-ratio-md) * var(--ms-ratio-md) * var(--ms-ratio-md) * var(--ms-ratio-md) * var(--ms-ratio-md)); }
+    @media (--ms-viewport-lg) { font-size: calc(var(--ms-base-lg) * var(--ms-ratio-lg) * var(--ms-ratio-lg) * var(--ms-ratio-lg) * var(--ms-ratio-lg) * var(--ms-ratio-lg) * var(--ms-ratio-lg) * var(--ms-ratio-lg)); }
   }
 
   --font-size-8: {
-    font-size: calc(var(--ms-base) * var(--ms-ratio-sm) * var(--ms-ratio-sm) * var(--ms-ratio-sm) * var(--ms-ratio-sm) * var(--ms-ratio-sm) * var(--ms-ratio-sm) * var(--ms-ratio-sm) * var(--ms-ratio-sm));
-    @media (--ms-viewport-md) { font-size: calc(var(--ms-base) * var(--ms-ratio-md) * var(--ms-ratio-md) * var(--ms-ratio-md) * var(--ms-ratio-md) * var(--ms-ratio-md) * var(--ms-ratio-md) * var(--ms-ratio-md) * var(--ms-ratio-md)); }
-    @media (--ms-viewport-lg) { font-size: calc(var(--ms-base) * var(--ms-ratio-lg) * var(--ms-ratio-lg) * var(--ms-ratio-lg) * var(--ms-ratio-lg) * var(--ms-ratio-lg) * var(--ms-ratio-lg) * var(--ms-ratio-lg) * var(--ms-ratio-lg)); }
+    font-size: calc(var(--ms-base-sm) * var(--ms-ratio-sm) * var(--ms-ratio-sm) * var(--ms-ratio-sm) * var(--ms-ratio-sm) * var(--ms-ratio-sm) * var(--ms-ratio-sm) * var(--ms-ratio-sm) * var(--ms-ratio-sm));
+    @media (--ms-viewport-md) { font-size: calc(var(--ms-base-md) * var(--ms-ratio-md) * var(--ms-ratio-md) * var(--ms-ratio-md) * var(--ms-ratio-md) * var(--ms-ratio-md) * var(--ms-ratio-md) * var(--ms-ratio-md) * var(--ms-ratio-md)); }
+    @media (--ms-viewport-lg) { font-size: calc(var(--ms-base-lg) * var(--ms-ratio-lg) * var(--ms-ratio-lg) * var(--ms-ratio-lg) * var(--ms-ratio-lg) * var(--ms-ratio-lg) * var(--ms-ratio-lg) * var(--ms-ratio-lg) * var(--ms-ratio-lg)); }
   }
 }
