Add support for @extend

--- a/modularscale.apply.css
+++ b/modularscale.apply.css
@@ -1,5 +1,5 @@
 :root {
-  --font-size--1: {
+  --ms-font-size--1: {
     font-size: calc(var(--ms-base-sm) / var(--ms-ratio-sm));
     @media (--ms-viewport-md) {
       font-size: calc(var(--ms-base-md) / var(--ms-ratio-md));
@@ -9,7 +9,7 @@
     }
   }
 
-  --font-size-0: {
+  --ms-font-size-0: {
     font-size: var(--ms-base-sm);
     @media (--ms-viewport-md) {
       font-size: var(--ms-base-md);
@@ -19,7 +19,7 @@
     }
   }
 
-  --font-size-1: {
+  --ms-font-size-1: {
     font-size: calc(var(--ms-base-sm) * var(--ms-ratio-sm));
     @media (--ms-viewport-md) {
       font-size: calc(var(--ms-base-md) * var(--ms-ratio-md));
@@ -29,7 +29,7 @@
     }
   }
 
-  --font-size-2: {
+  --ms-font-size-2: {
     font-size: calc(
       var(--ms-base-sm) * var(--ms-ratio-sm) * var(--ms-ratio-sm)
     );
@@ -45,7 +45,7 @@
     }
   }
 
-  --font-size-3: {
+  --ms-font-size-3: {
     font-size: calc(
       var(--ms-base-sm) * var(--ms-ratio-sm) * var(--ms-ratio-sm) *
         var(--ms-ratio-sm)
@@ -64,7 +64,7 @@
     }
   }
 
-  --font-size-4: {
+  --ms-font-size-4: {
     font-size: calc(
       var(--ms-base-sm) * var(--ms-ratio-sm) * var(--ms-ratio-sm) *
         var(--ms-ratio-sm) * var(--ms-ratio-sm)
@@ -83,7 +83,7 @@
     }
   }
 
-  --font-size-5: {
+  --ms-font-size-5: {
     font-size: calc(
       var(--ms-base-sm) * var(--ms-ratio-sm) * var(--ms-ratio-sm) *
         var(--ms-ratio-sm) * var(--ms-ratio-sm) * var(--ms-ratio-sm)
@@ -102,7 +102,7 @@
     }
   }
 
-  --font-size-6: {
+  --ms-font-size-6: {
     font-size: calc(
       var(--ms-base-sm) * var(--ms-ratio-sm) * var(--ms-ratio-sm) *
         var(--ms-ratio-sm) * var(--ms-ratio-sm) * var(--ms-ratio-sm) *
@@ -124,7 +124,7 @@
     }
   }
 
-  --font-size-7: {
+  --ms-font-size-7: {
     font-size: calc(
       var(--ms-base-sm) * var(--ms-ratio-sm) * var(--ms-ratio-sm) *
         var(--ms-ratio-sm) * var(--ms-ratio-sm) * var(--ms-ratio-sm) *
@@ -146,7 +146,7 @@
     }
   }
 
-  --font-size-8: {
+  --ms-font-size-8: {
     font-size: calc(
       var(--ms-base-sm) * var(--ms-ratio-sm) * var(--ms-ratio-sm) *
         var(--ms-ratio-sm) * var(--ms-ratio-sm) * var(--ms-ratio-sm) *
@@ -168,7 +168,7 @@
     }
   }
 
-  --font-size-9: {
+  --ms-font-size-9: {
     font-size: calc(
       var(--ms-base-sm) * var(--ms-ratio-sm) * var(--ms-ratio-sm) *
         var(--ms-ratio-sm) * var(--ms-ratio-sm) * var(--ms-ratio-sm) *
@@ -193,7 +193,7 @@
     }
   }
 
-  --font-size-10: {
+  --ms-font-size-10: {
     font-size: calc(
       var(--ms-base-sm) * var(--ms-ratio-sm) * var(--ms-ratio-sm) *
         var(--ms-ratio-sm) * var(--ms-ratio-sm) * var(--ms-ratio-sm) *
@@ -218,7 +218,7 @@
     }
   }
 
-  --font-size-11: {
+  --ms-font-size-11: {
     font-size: calc(
       var(--ms-base-sm) * var(--ms-ratio-sm) * var(--ms-ratio-sm) *
         var(--ms-ratio-sm) * var(--ms-ratio-sm) * var(--ms-ratio-sm) *
@@ -243,7 +243,7 @@
     }
   }
 
-  --font-size-12: {
+  --ms-font-size-12: {
     font-size: calc(
       var(--ms-base-sm) * var(--ms-ratio-sm) * var(--ms-ratio-sm) *
         var(--ms-ratio-sm) * var(--ms-ratio-sm) * var(--ms-ratio-sm) *
@@ -271,7 +271,7 @@
     }
   }
 
-  --font-size-13: {
+  --ms-font-size-13: {
     font-size: calc(
       var(--ms-base-sm) * var(--ms-ratio-sm) * var(--ms-ratio-sm) *
         var(--ms-ratio-sm) * var(--ms-ratio-sm) * var(--ms-ratio-sm) *
@@ -299,7 +299,7 @@
     }
   }
 
-  --font-size-14: {
+  --ms-font-size-14: {
     font-size: calc(
       var(--ms-base-sm) * var(--ms-ratio-sm) * var(--ms-ratio-sm) *
         var(--ms-ratio-sm) * var(--ms-ratio-sm) * var(--ms-ratio-sm) *
@@ -327,7 +327,7 @@
     }
   }
 
-  --font-size-15: {
+  --ms-font-size-15: {
     font-size: calc(
       var(--ms-base-sm) * var(--ms-ratio-sm) * var(--ms-ratio-sm) *
         var(--ms-ratio-sm) * var(--ms-ratio-sm) * var(--ms-ratio-sm) *
@@ -358,7 +358,7 @@
     }
   }
 
-  --font-size-16: {
+  --ms-font-size-16: {
     font-size: calc(
       var(--ms-base-sm) * var(--ms-ratio-sm) * var(--ms-ratio-sm) *
         var(--ms-ratio-sm) * var(--ms-ratio-sm) * var(--ms-ratio-sm) *
@@ -389,7 +389,7 @@
     }
   }
 
-  --font-size-17: {
+  --ms-font-size-17: {
     font-size: calc(
       var(--ms-base-sm) * var(--ms-ratio-sm) * var(--ms-ratio-sm) *
         var(--ms-ratio-sm) * var(--ms-ratio-sm) * var(--ms-ratio-sm) *
@@ -420,7 +420,7 @@
     }
   }
 
-  --font-size-18: {
+  --ms-font-size-18: {
     font-size: calc(
       var(--ms-base-sm) * var(--ms-ratio-sm) * var(--ms-ratio-sm) *
         var(--ms-ratio-sm) * var(--ms-ratio-sm) * var(--ms-ratio-sm) *
@@ -454,7 +454,7 @@
     }
   }
 
-  --font-size-19: {
+  --ms-font-size-19: {
     font-size: calc(
       var(--ms-base-sm) * var(--ms-ratio-sm) * var(--ms-ratio-sm) *
         var(--ms-ratio-sm) * var(--ms-ratio-sm) * var(--ms-ratio-sm) *
@@ -488,7 +488,7 @@
     }
   }
 
-  --font-size-20: {
+  --ms-font-size-20: {
     font-size: calc(
       var(--ms-base-sm) * var(--ms-ratio-sm) * var(--ms-ratio-sm) *
         var(--ms-ratio-sm) * var(--ms-ratio-sm) * var(--ms-ratio-sm) *
